examples/minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-webserver
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver1
          servicePort: 8080
